syntax = "proto3";

package main;

option go_package = "go_Grpc/blog/proto";

import "google/protobuf/empty.proto";

message Blog{
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;

}

message BlogId{
    string id = 1;
}

service BlogService{
    rpc CreatBlog (Blog) returns (BlogId);
    rpc ReadBlog (BlogId) returns (Blog);
    rpc UpdateBlog (Blog) returns (google.protobuf.Empty);
    rpc DeleteBlog (BlogId) returns (google.protobuf.Empty);
    rpc ListBlog (google.protobuf.Empty) returns (stream Blog);
}